Add invoke tasks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.8"
 pygame = "^2.1.2"
 pygame-menu = "^4.2.8"
+invoke = "^1.7.3"
 
 
 [tool.poetry.group.dev.dependencies]
