--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,3 @@
 [run]
 source = src
-omit = src/**/__init__.py,src/tests/**,src/index.py
+omit = src/**/__init__.py,src/tests/**,src/run.py,src/ui/**,src/services/event_queue.py,src/services/clock.py
