--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,15 @@ pygame = "^2.1.2"
 pygame-menu = "^4.2.8"
 invoke = "^1.7.3"
 numpy = "^1.23.5"
+python-dotenv = "^0.21.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 coverage = "^6.5.0"
 pylint = "^2.15.7"
+autopep8 = "^2.0.1"
+pytest-dotenv = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core"]
